land/copernicus/theme/skins/copernicus_theme_styles/redesign-app.css
/* ... */
@media (min-width: 800px) and (max-width: 950px) {
  div.insitu-images-slider-container div.images-slider .carousel-caption {
    left: auto;
    right: auto;
  }
}

.carousel-control .icon-prev,
.carousel-control .fa-chevron-left,
.carousel-control .fa-chevron-right {
  margin: 0 auto;
}

div.insitu-images-slider-container .carousel-indicators {
  text-align: center !important;
  width: 100% !important;
  left:10% !important;
}
div.insitu-images-slider-container .carousel-indicators li {
  background-color: #000000;
}
div.insitu-images-slider-container .carousel-indicators li.active {
  background-color: #783F34;
}

